--- a/GognizantTask/wwwroot/css/site.css
+++ b/GognizantTask/wwwroot/css/site.css
@@ -58,3 +58,50 @@ body {
 .control-label {
 	padding-left: 0px;
 }
+
+.nematomas {
+	display: none;
+}
+
+.compilation-status {
+	font-size: 26px;
+}
+
+.fail {
+	color: #db2644;
+}
+
+.success {
+	color: #1ba94c;
+}
+.compile-advice {
+	color: #576871;
+	font-size: 14px;
+	margin: 10px 0 20px;
+}
+
+.result-card {
+	width: 51em;
+}
+
+.compile-message {
+	background-color: #f3f7f7;
+	font-weight: bold;
+	margin-bottom: 20px;
+}
+
+.test-pased {
+	color: #1ba94c;
+}
+
+.test-failed {
+	color: #db2644;
+}
+
+p.label {
+	margin-bottom: 2px;
+}
+
+li.error-label {
+	color: #db2644;
+}
