--- a/GognizantTask/Views/Submission/Index.cshtml
+++ b/GognizantTask/Views/Submission/Index.cshtml
@@ -23,8 +23,7 @@
 		@Html.TextAreaFor(m => m.Submission, new { @class = "submission form-control col-sm-9", rows = "15" })
 	</div>
 	<div class="form-group col-sm-9">
-		<button type="button" class="btn btn-sm btn-primary float-right submit-code">Submit Code</button>
-		<button type="button" class="btn btn-sm btn-success float-right run-code">Run Code</button>
+		<button type="button" class="btn btn-sm btn-success run-code">Run Code</button>
 
 	</div>
 
